--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 /node_modules
-/git/git.html
 /docker/demo/front/vendor
 /docker/demo/front/composer.lock
 /docker/demo/docker-compose.override.yml
+/web/*
+!/web/.gitkeep
+!/web/assets
+!/web/index.html
