--- a/docker/demo/docker/php-fpm/Dockerfile
+++ b/docker/demo/docker/php-fpm/Dockerfile
@@ -35,6 +35,13 @@ RUN export VERSION=`php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;"` \
     && mv /tmp/blackfire-*.so `php -r "echo ini_get('extension_dir');"`/blackfire.so \
     && echo "extension=blackfire.so\nblackfire.agent_socket=\${BLACKFIRE_PORT}\nblackfire.log_file=/var/log/blackfire.log\nblackfire.log_level=4" > /etc/php/7.0/fpm/conf.d/blackfire.ini
 
+# Git & tools
+RUN apt-get update \
+    && apt-get update \
+    && apt-get -y --no-install-recommends install git unzip \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+
 WORKDIR "/var/www"
 
 EXPOSE 9000
