--- a/docker/demo/docker/php-fpm/Dockerfile
+++ b/docker/demo/docker/php-fpm/Dockerfile
@@ -1,48 +1,28 @@
-FROM debian:jessie
+FROM alpine:3.7
 
-# Install dotdeb repo, PHP, composer and selected extensions
-RUN apt-get update \
-    && apt-get install -y curl \
-    && echo "deb http://packages.dotdeb.org jessie all" > /etc/apt/sources.list.d/dotdeb.list \
-    && curl -sS https://www.dotdeb.org/dotdeb.gpg | apt-key add - \
-    && apt-get update \
-    && apt-get -y --no-install-recommends install php7.0-cli php7.0-fpm php7.0-apcu php7.0-apcu-bc php7.0-curl php7.0-json php7.0-mcrypt php7.0-opcache php7.0-readline \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+RUN apk add --update --no-cache \
+    ca-certificates \
+    php7-fpm \
+    php7-apcu \
+    php7-curl \
+    php7-json \
+    php7-mbstring \
+    php7-opcache \
+    curl \
+    fcgi \
+ && rm -rf /var/cache/apk/* && rm -rf /tmp/*
 
-# Composer
-RUN curl -k -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN addgroup www-data && adduser -h /var/www -D -g '' -G www-data www-data
 
-# Configure FPM to run properly on docker
-RUN sed -i "/listen = .*/c\listen = [::]:9000" /etc/php/7.0/fpm/pool.d/www.conf \
-    && sed -i "/;access.log = .*/c\access.log = /proc/self/fd/2" /etc/php/7.0/fpm/pool.d/www.conf \
-    && sed -i "/;clear_env = .*/c\clear_env = no" /etc/php/7.0/fpm/pool.d/www.conf \
-    && sed -i "/;catch_workers_output = .*/c\catch_workers_output = yes" /etc/php/7.0/fpm/pool.d/www.conf \
-    && sed -i "/pid = .*/c\;pid = /run/php/php7.0-fpm.pid" /etc/php/7.0/fpm/php-fpm.conf \
-    && sed -i "/;daemonize = .*/c\daemonize = no" /etc/php/7.0/fpm/php-fpm.conf \
-    && sed -i "/error_log = .*/c\error_log = /proc/self/fd/2" /etc/php/7.0/fpm/php-fpm.conf \
-    && usermod -u 1000 www-data
+COPY ./files/. /
 
-# Install php extensions
-RUN apt-get update \
-    && apt-get -y --no-install-recommends install php7.0-mysql php7.0-redis \
-    && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+ENV APP_ENV=prod
 
-# Blackfire.io
-RUN export VERSION=`php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;"` \
-    && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/${VERSION} \
-    && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp \
-    && mv /tmp/blackfire-*.so `php -r "echo ini_get('extension_dir');"`/blackfire.so \
-    && echo "extension=blackfire.so\nblackfire.agent_socket=\${BLACKFIRE_PORT}\nblackfire.log_file=/var/log/blackfire.log\nblackfire.log_level=4" > /etc/php/7.0/fpm/conf.d/blackfire.ini
+ENTRYPOINT ["entrypoint"]
+CMD ["php-fpm7", "-F"]
 
-# Git & tools
-RUN apt-get update \
-    && apt-get update \
-    && apt-get -y --no-install-recommends install git unzip \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+WORKDIR /srv
+EXPOSE 9001
 
-WORKDIR "/var/www"
-
-EXPOSE 9000
-CMD ["/usr/sbin/php-fpm7.0"]
+HEALTHCHECK --interval=30s --timeout=5s CMD REDIRECT_STATUS=true SCRIPT_FILENAME=/srv/ping.php REQUEST_URI=/ REQUEST_METHOD=GET cgi-fcgi -bind -connect 127.0.0.1:9001
+STOPSIGNAL SIGQUIT
