--- a/docker/demo/docker-compose.yml
+++ b/docker/demo/docker-compose.yml
@@ -1,54 +1,101 @@
+version: "3.2"
 
-#redis:
-#    image: phpdockerio/redis:latest
-#
-#mysql:
+networks:
+  api: ~
+  front: ~
+
+volumes:
+  data-mysql: ~
+
+services:
+  traefik:
+    image: traefik:v1.6-alpine
+    networks:
+      - api
+      - front
+    ports:
+      - '8080:80'
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.port=9000'
+      - 'traefik.frontend.rule=Host:traefik.rtfm.vcap.me'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./docker/traefik/traefik.toml:/etc/traefik/traefik.toml
+
+  front:
+    build: docker/nginx
+    volumes:
+      - ./front:/srv
+    depends_on:
+      - front_php
+    networks:
+      - front
+    ports:
+      - '80'
+    environment:
+      - PHP_BACKEND=front_php:9001
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.port=80'
+      - 'traefik.frontend.rule=Host:front.rtfm.vcap.me'
+
+  front_php:
+    build: docker/php-fpm
+    volumes:
+      - ./front:/srv
+    environment:
+      - APP_ENV=dev
+    networks:
+      - front
+      - api
+
+  api:
+    build: docker/nginx
+    volumes:
+      - ./api:/srv
+    depends_on:
+      - api_php
+    networks:
+      - api
+    ports:
+      - '80'
+    environment:
+      - PHP_BACKEND=api_php:9001
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.port=80'
+      - 'traefik.frontend.rule=Host:api.rtfm.vcap.me'
+
+  api_php:
+    build: docker/php-fpm
+    volumes:
+      - ./api:/srv
+    environment:
+      - APP_ENV=dev
+    networks:
+      - api
+
+#  mysql:
 #    image: mysql:5.7
+#    networks:
+#      - api
 #    environment:
-#        - MYSQL_ROOT_PASSWORD=root
-#        - MYSQL_DATABASE=myproject
-#        - MYSQL_USER=myproject
-#        - MYSQL_PASSWORD=myproject
-#
-#elasticsearch:
-#    image: elasticsearch:2.2
+#      - MYSQL_RANDOM_ROOT_PASSWORD=1
+#      - MYSQL_DATABASE=api
+#      - MYSQL_USER=api
+#      - MYSQL_PASSWORD=apipasswd
+#    volumes:
+#      - data-mysql:/var/lib/mysql/
 
-front-nginx:
-    image: phpdockerio/nginx:latest
+  tools:
+    build: docker/tools
+    command: sleep 999999d
     volumes:
-        - ./front:/var/www
-        - ./docker/nginx/nginx-front.conf:/etc/nginx/conf.d/default.conf
-    ports:
-        - "18880:80"
-    links:
-        - front-fpm
-
-front-fpm:
-    build: .
-    dockerfile: docker/php-fpm/Dockerfile
-    volumes:
-        - ./front:/var/www
-        - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.0/fpm/conf.d/99-overrides.ini
-    links:
-        - api-nginx:api.rtfm.docker
-
-api-nginx:
-    image: phpdockerio/nginx:latest
-    volumes:
-        - ./api:/var/www
-        - ./docker/nginx/nginx-api.conf:/etc/nginx/conf.d/default.conf
-    ports:
-        - "18881:80"
-    links:
-        - api-fpm
-
-api-fpm:
-    build: .
-    dockerfile: docker/php-fpm/Dockerfile
-    volumes:
-        - ./api:/var/www
-        - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.0/fpm/conf.d/99-overrides.ini
-#    links:
-#        - mysql
-#        - redis
-#        - elasticsearch
+      - ./api:/srv/api
+      - ./front:/srv/front
+    environment:
+      - APP_ENV=dev
+    networks:
+      - api
+      - front
