--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,14 @@ deploy:uat:
 
 deploy:snapshot:
   stage: deploy
+  before_script:
+    - apk add --no-cache openssh-client
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - mkdir -p ~/.ssh && chmod 700 ~/.ssh
   script:
     - echo "Deploying snapshot..."
+    - ssh -A -o StrictHostKeyChecking=no "$SSH_SNAPSHOT_SERVER" "cd mroca-ami && ./update.sh"
   only:
     - master
 
